some missed ix- instances

--- a/projects/truenas-ui/src/lib/calendar/month-view.component.html
+++ b/projects/truenas-ui/src/lib/calendar/month-view.component.html
@@ -20,30 +20,30 @@
           <td
             role="gridcell"
             class="tn-calendar-body-cell-container"
-            [attr.data-ix-row]="rowIndex"
-            [attr.data-ix-col]="colIndex">
+            [attr.data-tn-row]="rowIndex"
+            [attr.data-tn-col]="colIndex">
             @if (cell.value > 0) {
               <button
                 type="button"
                 class="tn-calendar-body-cell"
-                [class.ix-calendar-body-selected]="cell.selected"
-                [class.ix-calendar-body-today]="cell.today"
-                [class.ix-calendar-body-active]="cell.selected"
-                [class.ix-calendar-body-range-start]="cell.rangeStart"
-                [class.ix-calendar-body-range-end]="cell.rangeEnd"
-                [class.ix-calendar-body-in-range]="cell.inRange"
+                [class.tn-calendar-body-selected]="cell.selected"
+                [class.tn-calendar-body-today]="cell.today"
+                [class.tn-calendar-body-active]="cell.selected"
+                [class.tn-calendar-body-range-start]="cell.rangeStart"
+                [class.tn-calendar-body-range-end]="cell.rangeEnd"
+                [class.tn-calendar-body-in-range]="cell.inRange"
                 [disabled]="!cell.enabled"
                 [attr.tabindex]="cell.selected ? 0 : -1"
                 [attr.aria-label]="cell.ariaLabel"
                 [attr.aria-pressed]="cell.selected"
                 [attr.aria-current]="cell.today ? 'date' : null"
                 (click)="onCellClicked(cell)">
-                <span class="tn-calendar-body-cell-content ix-focus-indicator"
-                      [class.ix-calendar-body-selected]="cell.selected"
-                      [class.ix-calendar-body-today]="cell.today"
-                      [class.ix-calendar-body-range-start]="cell.rangeStart"
-                      [class.ix-calendar-body-range-end]="cell.rangeEnd"
-                      [class.ix-calendar-body-in-range]="cell.inRange">
+                <span class="tn-calendar-body-cell-content tn-focus-indicator"
+                      [class.tn-calendar-body-selected]="cell.selected"
+                      [class.tn-calendar-body-today]="cell.today"
+                      [class.tn-calendar-body-range-start]="cell.rangeStart"
+                      [class.tn-calendar-body-range-end]="cell.rangeEnd"
+                      [class.tn-calendar-body-in-range]="cell.inRange">
                   {{ cell.value }}
                 </span>
                 <span aria-hidden="true" class="tn-calendar-body-cell-preview"></span>
