--- a/projects/truenas-ui/src/lib/date-range-input/date-input.component.html
+++ b/projects/truenas-ui/src/lib/date-range-input/date-input.component.html
@@ -5,7 +5,7 @@
       <input
         #monthInput
         type="text"
-        class="tn-date-segment ix-date-segment-month"
+        class="tn-date-segment tn-date-segment-month"
         placeholder="MM"
         maxlength="2"
         [disabled]="isDisabled()"
@@ -16,7 +16,7 @@
       <input
         #dayInput
         type="text"
-        class="tn-date-segment ix-date-segment-day"
+        class="tn-date-segment tn-date-segment-day"
         placeholder="DD"
         maxlength="2"
         [disabled]="isDisabled()"
@@ -27,7 +27,7 @@
       <input
         #yearInput
         type="text"
-        class="tn-date-segment ix-date-segment-year"
+        class="tn-date-segment tn-date-segment-year"
         placeholder="YYYY"
         maxlength="4"
         [disabled]="isDisabled()"
