--- a/projects/truenas-ui/src/lib/input/input.component.html
+++ b/projects/truenas-ui/src/lib/input/input.component.html
@@ -19,7 +19,7 @@
   @if (multiline()) {
     <textarea
       #inputEl
-      class="tn-input ix-textarea"
+      class="tn-input tn-textarea"
       [id]="id"
       [value]="value"
       [attr.placeholder]="placeholder()"
