--- a/projects/truenas-ui/src/lib/tab/tab.component.scss
+++ b/projects/truenas-ui/src/lib/tab/tab.component.scss
@@ -67,7 +67,7 @@
   }
 }
 
-// Vertical tabs - make ix-tab and button fill full width of header
+// Vertical tabs - make tn-tab and button fill full width of header
 :host-context(.tn-tabs--vertical) {
   width: 100%;
   
