--- a/projects/truenas-ui/src/lib/date-range-input/date-range-input.component.html
+++ b/projects/truenas-ui/src/lib/date-range-input/date-range-input.component.html
@@ -5,7 +5,7 @@
       <input
         #startMonthInput
         type="text"
-        class="tn-date-segment ix-date-segment-month"
+        class="tn-date-segment tn-date-segment-month"
         placeholder="MM"
         maxlength="2"
         [disabled]="isDisabled()"
@@ -16,7 +16,7 @@
       <input
         #startDayInput
         type="text"
-        class="tn-date-segment ix-date-segment-day"
+        class="tn-date-segment tn-date-segment-day"
         placeholder="DD"
         maxlength="2"
         [disabled]="isDisabled()"
@@ -27,7 +27,7 @@
       <input
         #startYearInput
         type="text"
-        class="tn-date-segment ix-date-segment-year"
+        class="tn-date-segment tn-date-segment-year"
         placeholder="YYYY"
         maxlength="4"
         [disabled]="isDisabled()"
@@ -43,7 +43,7 @@
       <input
         #endMonthInput
         type="text"
-        class="tn-date-segment ix-date-segment-month"
+        class="tn-date-segment tn-date-segment-month"
         placeholder="MM"
         maxlength="2"
         [disabled]="isDisabled()"
@@ -54,7 +54,7 @@
       <input
         #endDayInput
         type="text"
-        class="tn-date-segment ix-date-segment-day"
+        class="tn-date-segment tn-date-segment-day"
         placeholder="DD"
         maxlength="2"
         [disabled]="isDisabled()"
@@ -65,7 +65,7 @@
       <input
         #endYearInput
         type="text"
-        class="tn-date-segment ix-date-segment-year"
+        class="tn-date-segment tn-date-segment-year"
         placeholder="YYYY"
         maxlength="4"
         [disabled]="isDisabled()"
