--- a/projects/truenas-ui/src/lib/dialog/dialog.scss
+++ b/projects/truenas-ui/src/lib/dialog/dialog.scss
@@ -16,7 +16,7 @@
 }
 
 /* Shell component wrapper */
-ix-dialog-shell {
+tn-dialog-shell {
   display: flex;
   flex-direction: column;
   min-height: 0; /* allow inner area to shrink */
