--- a/projects/truenas-ui/src/lib/select/select.component.html
+++ b/projects/truenas-ui/src/lib/select/select.component.html
@@ -8,7 +8,7 @@
     [class.open]="isOpen()"
     [attr.aria-expanded]="isOpen()"
     [attr.aria-haspopup]="true"
-    [attr.aria-controls]="isOpen() ? 'ix-select-dropdown-' + testId() : null"
+    [attr.aria-controls]="isOpen() ? 'tn-select-dropdown-' + testId() : null"
     [attr.aria-label]="placeholder()"
     (click)="toggleDropdown()"
     (keydown)="onKeydown($event)">
@@ -33,7 +33,7 @@
     <div
       class="tn-select-dropdown"
       role="listbox"
-      [attr.id]="'ix-select-dropdown-' + testId()">
+      [attr.id]="'tn-select-dropdown-' + testId()">
 
       <!-- Options List -->
       <div class="tn-select-options">
