--- a/projects/truenas-ui/src/lib/spinner/spinner.component.scss
+++ b/projects/truenas-ui/src/lib/spinner/spinner.component.scss
@@ -4,7 +4,7 @@
 }
 
 .tn-spinner-svg {
-  animation: ix-spinner-rotate 2s linear infinite;
+  animation: tn-spinner-rotate 2s linear infinite;
   transform-origin: center;
 }
 
@@ -15,7 +15,7 @@
 }
 
 .tn-spinner-indeterminate .tn-spinner-circle {
-  animation: ix-spinner-dash 1.4s ease-in-out infinite;
+  animation: tn-spinner-dash 1.4s ease-in-out infinite;
 }
 
 .tn-spinner-determinate .tn-spinner-svg {
@@ -23,7 +23,7 @@
   transform: rotate(-90deg);
 }
 
-@keyframes ix-spinner-rotate {
+@keyframes tn-spinner-rotate {
   0% {
     transform: rotate(0deg);
   }
@@ -32,7 +32,7 @@
   }
 }
 
-@keyframes ix-spinner-dash {
+@keyframes tn-spinner-dash {
   0% {
     stroke-dasharray: 1, 200;
     stroke-dashoffset: 0;
