--- a/projects/truenas-ui/src/lib/tabs/tabs.component.html
+++ b/projects/truenas-ui/src/lib/tabs/tabs.component.html
@@ -1,6 +1,6 @@
 <div role="tablist" [ngClass]="classes()" [attr.aria-orientation]="orientation()">
   <div #tabHeader class="tn-tabs__header">
-    <ng-content select="ix-tab" />
+    <ng-content select="tn-tab" />
     @if (highlightBarVisible()) {
       <div class="tn-tabs__highlight-bar"
            [style.left.px]="highlightBarLeft()"
@@ -12,6 +12,6 @@
   </div>
 
   <div class="tn-tabs__content">
-    <ng-content select="ix-tab-panel" />
+    <ng-content select="tn-tab-panel" />
   </div>
 </div>
