feat(icon): Add fullSize input to TnIconComponent
- Add fullSize input signal (boolean, default false)
- When true, icon expands to fill container (100% width/height)
- Add tn-icon--full CSS class for full-size styling
- Add isFullSize() method and fullSize filter to TnIconHarness
- Refactor tests to use TnIconTesting.jest.providers()
- Add Storybook story demonstrating fullSize feature

--- a/projects/truenas-ui/src/lib/icon/icon.component.html
+++ b/projects/truenas-ui/src/lib/icon/icon.component.html
@@ -1,7 +1,7 @@
 <div
   class="tn-icon"
   role="img"
-  [ngClass]="'tn-icon--' + size()"
+  [ngClass]="fullSize() ? 'tn-icon--full' : 'tn-icon--' + size()"
   [style.color]="color()"
   [attr.aria-label]="effectiveAriaLabel()"
   [attr.title]="tooltip()">
